# zephyr-course

app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/drivers/led_sensor/: CMakeLists.txt  Kconfig  led_sensor.c  led_sensor.h  led_sensor_shell.c
app/modules/calculator/: CMakeLists.txt
app/modules/calculator/include/: calculator.h
app/modules/calculator/src/: calculator.c
app/modules/ring_buf/: CMakeLists.txt
app/modules/ring_buf/include/: ring_buf.h
app/modules/ring_buf/src/: ring_buf.c
app/src/: main.cpp
boards/my_board/: Kconfig.my_board  board.c  board.cmake  board.yml  my_board.dts
boards/our_board/: Kconfig.defconfig  Kconfig.our_board  board.yml  our_board.dts  our_board.yaml
dts/bindings/: my,led_sensor.yaml
tests/calculator/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/calculator/src/: test_basic.c
tests/ring_buf/: CMakeLists.txt  HOMEWORK.md  TEST_SPEC.md  prj.conf  testcase.yaml
tests/ring_buf/src/: test_ring_buf.c
twister-out/: coverage.json  coverage_summary.json  testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out/coverage/: index.functions.html  index.html  index.ring_buf.c.8c3cea90f03862a83cd633b698d92c2f.html
twister-out/native_sim_native/host/homework.unit.ring_buf/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  run_id.txt  zephyr_modules.txt  zephyr_settings.txt
twister-out/native_sim_native/host/homework.unit.ring_buf/Kconfig/: Kconfig.modules  Kconfig.sysbuild.modules
(+113 files in other folders)
